Alteração de path nos scripts config

--- a/report/PR/figs/tabelaoPR.tex
+++ b/report/PR/figs/tabelaoPR.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.0 by xtable 1.8-2 package
-% Tue Aug 23 12:41:05 2016
+% Thu Aug 25 15:55:13 2016
 \begin{longtable}{l|lllllll}
   \hline
 Municipio & Regional & Temperatura & Tweets & Casos & Incidencia & Rt & Nivel \\ 
@@ -18,56 +18,56 @@ Abatiá & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\
   Alto Paraná & Paranavaí & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Alto Piquiri & Umuarama & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Altônia & Umuarama & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Alvorada do Sul & Londrina & 16.1 &  & 4 & 54.7 & 2.5 & verde \\ 
-  Amaporã & Paranavaí & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Ampére & Francisco Beltrão & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Anahy & Cascavel & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Andirá & Cornélio Procópio & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Ângulo & Maringá & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Antonina & Paranaguá & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Antônio Olinto & União da Vitória & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Apucarana & Apucarana & 16.1 &  & 4 & 3.1 & 1.0 & verde \\ 
-  Arapongas & Apucarana & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Arapoti & Ponta Grossa & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Arapuã & Ivaiporã & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Araruna & Campo Mourão & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Araucária & Curitiba & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Ariranha do Ivaí & Ivaiporã & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Assaí & Londrina & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Assis Chateaubriand & Toledo & 16.3 &  & 1 & 2.9 & 0.7 & verde \\ 
-  Astorga & Maringá & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Atalaia & Maringá & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Balsa Nova & Curitiba & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Bandeirantes & Cornélio Procópio & 16.1 &  & 1 & 3.1 & 1.0 & verde \\ 
-  Barbosa Ferraz & Campo Mourão & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Barra do Jacaré & Jacarezinho & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Barracão & Francisco Beltrão & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Bela Vista da Caroba & Francisco Beltrão & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Bela Vista do Paraíso & Londrina & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Bituruna & União da Vitória & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Boa Esperança & Campo Mourão & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Boa Esperança do Iguaçu & Francisco Beltrão & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Boa Ventura de São Roque & Guarapuava & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Boa Vista da Aparecida & Cascavel & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Bocaiúva do Sul & Curitiba & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Bom Jesus do Sul & Francisco Beltrão & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Bom Sucesso & Apucarana & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Bom Sucesso do Sul & Pato Branco & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Borrazópolis & Apucarana & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Braganey & Cascavel & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Brasilândia do Sul & Umuarama & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cafeara & Londrina & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cafelândia & Cascavel & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cafezal do Sul & Umuarama & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Califórnia & Apucarana & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cambará & Jacarezinho & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cambé & Londrina & 16.1 &  & 3 & 3.9 & 0.3 & verde \\ 
-  Cambira & Apucarana & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Campina da Lagoa & Campo Mourão & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Campina do Simão & Guarapuava & 11.4 &  & 0 & 0.0 &  & verde \\ 
-  Campina Grande do Sul & Curitiba & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Campo Bonito & Cascavel & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Campo do Tenente & Curitiba & 11.4 &  & 0 & 0.0 &  & verde \\ 
+  Alvorada do Sul & Londrina & 16.1 & 0 & 5 & 73.0 & 3.1 & verde \\ 
+  Amaporã & Paranavaí & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Ampére & Francisco Beltrão & 16.3 & 0 & 1 & 5.4 & 1.3 & verde \\ 
+  Anahy & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Andirá & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Ângulo & Maringá & 16.1 & 0 & 2 & 67.6 & 12.1 & verde \\ 
+  Antonina & Paranaguá & 11.4 & 0 & 1 & 5.2 & 12.1 & verde \\ 
+  Antônio Olinto & União da Vitória & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Apucarana & Apucarana & 16.1 & 0 & 7 & 5.4 & 1.6 & verde \\ 
+  Arapongas & Apucarana & 16.1 & 0 & 2 & 1.8 & 0.9 & verde \\ 
+  Arapoti & Ponta Grossa & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Arapuã & Ivaiporã & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Araruna & Campo Mourão & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Araucária & Curitiba & 11.4 & 1 & 0 & 0.0 & 0.0 & verde \\ 
+  Ariranha do Ivaí & Ivaiporã & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Assaí & Londrina & 16.1 & 0 & 1 & 6.1 & 0.3 & verde \\ 
+  Assis Chateaubriand & Toledo & 16.3 & 0 & 1 & 2.9 & 0.7 & verde \\ 
+  Astorga & Maringá & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Atalaia & Maringá & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Balsa Nova & Curitiba & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Bandeirantes & Cornélio Procópio & 16.1 & 0 & 1 & 3.1 & 1.0 & verde \\ 
+  Barbosa Ferraz & Campo Mourão & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Barra do Jacaré & Jacarezinho & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Barracão & Francisco Beltrão & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Bela Vista da Caroba & Francisco Beltrão & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Bela Vista do Paraíso & Londrina & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Bituruna & União da Vitória & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Boa Esperança & Campo Mourão & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Boa Esperança do Iguaçu & Francisco Beltrão & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Boa Ventura de São Roque & Guarapuava & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Boa Vista da Aparecida & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Bocaiúva do Sul & Curitiba & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Bom Jesus do Sul & Francisco Beltrão & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Bom Sucesso & Apucarana & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Bom Sucesso do Sul & Pato Branco & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Borrazópolis & Apucarana & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Braganey & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Brasilândia do Sul & Umuarama & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Cafeara & Londrina & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Cafelândia & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Cafezal do Sul & Umuarama & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Califórnia & Apucarana & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Cambará & Jacarezinho & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Cambé & Londrina & 16.1 & 0 & 7 & 10.7 & 0.7 & verde \\ 
+  Cambira & Apucarana & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Campina da Lagoa & Campo Mourão & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Campina do Simão & Guarapuava & 11.4 & 0 & 0 & 0.0 &  & verde \\ 
+  Campina Grande do Sul & Curitiba & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Campo Bonito & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Campo do Tenente & Curitiba & 11.4 & 0 & 0 & 0.0 &  & verde \\ 
   Campo Largo & Curitiba & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Campo Magro & Curitiba & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Campo Mourão & Campo Mourão & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
@@ -78,7 +78,7 @@ Abatiá & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\
   Capitão Leônidas Marques & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Carambeí & Ponta Grossa & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Carlópolis & Jacarezinho & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Cascavel & Cascavel & 16.3 & 0 & 5 & 1.9 & 0.5 & verde \\ 
+  Cascavel & Cascavel & 16.3 & 0 & 12 & 5.5 & 1.1 & verde \\ 
   Castro & Ponta Grossa & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Catanduvas & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Centenário do Sul & Londrina & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
@@ -93,7 +93,7 @@ Abatiá & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\
   Congonhinhas & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Conselheiro Mairinck & Jacarezinho & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Contenda & Curitiba & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Corbélia & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Corbélia & Cascavel & 16.3 & 0 & 1 & 5.9 & 2.9 & verde \\ 
   Cornélio Procópio & Cornélio Procópio & 16.1 & 0 & 1 & 2.1 & 1.2 & verde \\ 
   Coronel Domingos Soares & Pato Branco & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Coronel Vivida & Pato Branco & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
@@ -103,7 +103,7 @@ Abatiá & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\
   Cruzeiro do Oeste & Umuarama & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Cruzeiro do Sul & Paranavaí & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Cruzmaltina & Ivaiporã & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Curitiba & Curitiba & 11.4 & 1 & 4 & 0.4 & 0.3 & verde \\ 
+  Curitiba & Curitiba & 11.4 & 1 & 12 & 1.5 & 0.9 & verde \\ 
   Curiúva & Telêmaco Borba & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Diamante do Norte & Paranavaí & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Diamante do Sul & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
@@ -129,7 +129,7 @@ Abatiá & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\
   Florestópolis & Londrina & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Flórida & Maringá & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Formosa do Oeste & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Foz do Iguaçu & Foz do Iguaçu & 16.3 & 1 & 7 & 3.8 & 1.0 & verde \\ 
+  Foz do Iguaçu & Foz do Iguaçu & 16.3 & 1 & 11 & 6.1 & 1.6 & verde \\ 
   Foz do Jordão & Guarapuava & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Francisco Alves & Umuarama & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Francisco Beltrão & Francisco Beltrão & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
@@ -138,7 +138,7 @@ Abatiá & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\
   Goioerê & Campo Mourão & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Goioxim & Guarapuava & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Grandes Rios & Apucarana & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Guaíra & Toledo & 16.3 & 0 & 1 & 3.1 & 10.3 & verde \\ 
+  Guaíra & Toledo & 16.3 & 0 & 2 & 6.2 & 11.1 & verde \\ 
   Guairaçá & Paranavaí & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Guamiranga & Iratí & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Guapirama & Jacarezinho & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
@@ -151,7 +151,7 @@ Abatiá & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\
   Honório Serpa & Pato Branco & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Ibaiti & Jacarezinho & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Ibema & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Ibiporã & Londrina & 16.1 & 0 & 1 & 1.9 & 0.2 & verde \\ 
+  Ibiporã & Londrina & 16.1 & 0 & 6 & 17.4 & 1.5 & verde \\ 
   Icaraíma & Umuarama & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Iguaraçu & Maringá & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Iguatu & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
@@ -180,13 +180,13 @@ Abatiá & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\
   Jacarezinho & Jacarezinho & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Jaguapitã & Londrina & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Jaguariaíva & Ponta Grossa & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Jandaia do Sul & Apucarana & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Jandaia do Sul & Apucarana & 16.1 & 0 & 1 & 4.7 & 0.5 & verde \\ 
   Janiópolis & Campo Mourão & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Japira & Jacarezinho & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Japurá & Cianorte & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Jardim Alegre & Ivaiporã & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Jardim Olinda & Paranavaí & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Jataizinho & Londrina & 16.1 & 0 & 7 & 88.4 & 1.4 & verde \\ 
+  Jataizinho & Londrina & 16.1 & 0 & 13 & 176.7 & 2.4 & verde \\ 
   Jesuítas & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Joaquim Távora & Jacarezinho & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Jundiaí do Sul & Jacarezinho & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
@@ -201,7 +201,7 @@ Abatiá & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\
   Lindoeste & Cascavel & 16.3 & 0 & 1 & 19.1 & 12.1 & verde \\ 
   Loanda & Paranavaí & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Lobato & Maringá & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Londrina & Londrina & 16.1 & 1 & 32 & 10.9 & 0.8 & verde \\ 
+  Londrina & Londrina & 16.1 & 1 & 54 & 18.8 & 1.3 & verde \\ 
   Luiziana & Campo Mourão & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Lunardelli & Ivaiporã & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Lupionópolis & Londrina & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
@@ -215,11 +215,11 @@ Abatiá & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\
   Manoel Ribas & Ivaiporã & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Marechal Cândido Rondon & Toledo & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Maria Helena & Umuarama & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Marialva & Maringá & 16.1 & 0 & 1 & 2.9 & 0.5 & verde \\ 
+  Marialva & Maringá & 16.1 & 0 & 2 & 8.8 & 1.3 & verde \\ 
   Marilândia do Sul & Apucarana & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Marilena & Paranavaí & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Mariluz & Umuarama & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Maringá & Maringá & 16.1 & 4 & 11 & 4.9 & 0.6 & verde \\ 
+  Maringá & Maringá & 16.1 & 2 & 25 & 11.7 & 1.2 & verde \\ 
   Mariópolis & Pato Branco & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Maripá & Toledo & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Marmeleiro & Francisco Beltrão & 16.3 & 0 & 1 & 6.9 & 3.1 & verde \\ 
@@ -233,7 +233,7 @@ Abatiá & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\
   Mercedes & Toledo & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Mirador & Paranavaí & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Miraselva & Londrina & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Missal & Foz do Iguaçu & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Missal & Foz do Iguaçu & 16.3 & 0 & 1 & 9.2 & 1.5 & verde \\ 
   Moreira Sales & Campo Mourão & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Morretes & Paranaguá & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Munhoz de Melo & Maringá & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
@@ -242,7 +242,7 @@ Abatiá & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\
   Nova América da Colina & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Nova Aurora & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Nova Cantu & Campo Mourão & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Nova Esperança & Maringá & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Nova Esperança & Maringá & 16.1 & 0 & 1 & 3.6 & 0.9 & verde \\ 
   Nova Esperança do Sudoeste & Francisco Beltrão & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Nova Fátima & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Nova Laranjeiras & Guarapuava & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
@@ -263,62 +263,62 @@ Abatiá & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\
   Palotina & Toledo & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Paraíso do Norte & Paranavaí & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Paranacity & Maringá & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Paranaguá & Paranaguá & 11.4 & 0 & 2 & 1.3 & 0.6 & verde \\ 
+  Paranaguá & Paranaguá & 11.4 & 0 & 10 & 8.0 & 2.1 & verde \\ 
   Paranapoema & Paranavaí & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Paranavaí & Paranavaí & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Paranavaí & Paranavaí & 16.1 & 0 & 3 & 3.5 & 0.5 & verde \\ 
   Pato Bragado & Toledo & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Pato Branco & Pato Branco & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Paula Freitas & União da Vitória & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Paulo Frontin & União da Vitória & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Peabiru & Campo Mourão & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Perobal & Umuarama & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Pérola & Umuarama & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Pérola d'Oeste & Francisco Beltrão & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Piên & Curitiba & 11.4 &  & 0 & 0.0 &  & verde \\ 
-  Pinhais & Curitiba & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Pinhal de São Bento & Francisco Beltrão & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Pinhalão & Jacarezinho & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Pinhão & Guarapuava & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Piraí do Sul & Ponta Grossa & 11.4 &  & 0 & 0.0 &  & verde \\ 
-  Piraquara & Curitiba & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Pitanga & Guarapuava & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Pitangueiras & Londrina & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Planaltina do Paraná & Paranavaí & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Planalto & Francisco Beltrão & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Ponta Grossa & Ponta Grossa & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Pontal do Paraná & Paranaguá & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Porecatu & Londrina & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Porto Amazonas & Ponta Grossa & 11.4 &  & 0 & 0.0 &  & verde \\ 
-  Porto Barreiro & Guarapuava & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Porto Rico & Paranavaí & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Porto Vitória & União da Vitória & 11.4 &  & 0 & 0.0 &  & verde \\ 
-  Prado Ferreira & Londrina & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Pranchita & Francisco Beltrão & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Presidente Castelo Branco & Maringá & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Primeiro de Maio & Londrina & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Prudentópolis & Guarapuava & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Quarto Centenário & Campo Mourão & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Quatiguá & Jacarezinho & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Quatro Barras & Curitiba & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Quatro Pontes & Toledo & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Quedas do Iguaçu & Cascavel & 16.3 &  & 1 & 3.1 & 12.1 & verde \\ 
-  Querência do Norte & Paranavaí & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Quinta do Sol & Campo Mourão & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Quitandinha & Curitiba & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Ramilândia & Foz do Iguaçu & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rancho Alegre & Cornélio Procópio & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rancho Alegre D'Oeste & Campo Mourão & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Realeza & Francisco Beltrão & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rebouças & Iratí & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Renascença & Francisco Beltrão & 16.3 &  & 1 & 14.3 & 3.1 & verde \\ 
-  Reserva & Telêmaco Borba & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Reserva do Iguaçu & Guarapuava & 11.4 &  & 0 & 0.0 &  & verde \\ 
-  Ribeirão Claro & Jacarezinho & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Ribeirão do Pinhal & Cornélio Procópio & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rio Azul & Iratí & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rio Bom & Apucarana & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rio Bonito do Iguaçu & Guarapuava & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rio Branco do Ivaí & Ivaiporã & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Paulo Frontin & União da Vitória & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Peabiru & Campo Mourão & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Perobal & Umuarama & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Pérola & Umuarama & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Pérola d'Oeste & Francisco Beltrão & 16.3 & 1 & 0 & 0.0 & 0.0 & verde \\ 
+  Piên & Curitiba & 11.4 & 0 & 0 & 0.0 &  & verde \\ 
+  Pinhais & Curitiba & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Pinhal de São Bento & Francisco Beltrão & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Pinhalão & Jacarezinho & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Pinhão & Guarapuava & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Piraí do Sul & Ponta Grossa & 11.4 & 0 & 0 & 0.0 &  & verde \\ 
+  Piraquara & Curitiba & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Pitanga & Guarapuava & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Pitangueiras & Londrina & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Planaltina do Paraná & Paranavaí & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Planalto & Francisco Beltrão & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Ponta Grossa & Ponta Grossa & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Pontal do Paraná & Paranaguá & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Porecatu & Londrina & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Porto Amazonas & Ponta Grossa & 11.4 & 0 & 0 & 0.0 &  & verde \\ 
+  Porto Barreiro & Guarapuava & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Porto Rico & Paranavaí & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Porto Vitória & União da Vitória & 11.4 & 0 & 0 & 0.0 &  & verde \\ 
+  Prado Ferreira & Londrina & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Pranchita & Francisco Beltrão & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Presidente Castelo Branco & Maringá & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Primeiro de Maio & Londrina & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Prudentópolis & Guarapuava & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Quarto Centenário & Campo Mourão & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Quatiguá & Jacarezinho & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Quatro Barras & Curitiba & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Quatro Pontes & Toledo & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Quedas do Iguaçu & Cascavel & 16.3 & 0 & 1 & 3.1 & 12.1 & verde \\ 
+  Querência do Norte & Paranavaí & 16.1 & 0 & 1 & 8.2 & 1.5 & verde \\ 
+  Quinta do Sol & Campo Mourão & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Quitandinha & Curitiba & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Ramilândia & Foz do Iguaçu & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Rancho Alegre & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Rancho Alegre D'Oeste & Campo Mourão & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Realeza & Francisco Beltrão & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Rebouças & Iratí & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Renascença & Francisco Beltrão & 16.3 & 0 & 1 & 14.3 & 3.1 & verde \\ 
+  Reserva & Telêmaco Borba & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Reserva do Iguaçu & Guarapuava & 11.4 & 0 & 0 & 0.0 &  & verde \\ 
+  Ribeirão Claro & Jacarezinho & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Ribeirão do Pinhal & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Rio Azul & Iratí & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Rio Bom & Apucarana & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Rio Bonito do Iguaçu & Guarapuava & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Rio Branco do Ivaí & Ivaiporã & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Rio Branco do Sul & Curitiba & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Rio Negro & Curitiba & 11.4 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Rolândia & Londrina & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
@@ -333,7 +333,7 @@ Abatiá & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\
   Santa Cecília do Pavão & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Santa Cruz de Monte Castelo & Paranavaí & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Santa Fé & Maringá & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Santa Helena & Toledo & 16.3 & 0 & 1 & 4.0 & 0.3 & verde \\ 
+  Santa Helena & Toledo & 16.3 & 0 & 2 & 7.9 & 0.7 & verde \\ 
   Santa Inês & Maringá & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Santa Isabel do Ivaí & Paranavaí & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Santa Izabel do Oeste & Francisco Beltrão & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
@@ -370,7 +370,7 @@ Abatiá & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\
   São Sebastião da Amoreira & Cornélio Procópio & 16.1 & 0 & 1 & 11.2 & 12.1 & verde \\ 
   São Tomé & Cianorte & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Sapopema & Cornélio Procópio & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Sarandi & Maringá & 16.1 &  & 1 & 1.1 & 6.0 & verde \\ 
+  Sarandi & Maringá & 16.1 &  & 4 & 6.7 & 10.3 & verde \\ 
   Saudade do Iguaçu & Pato Branco & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
   Sengés & Ponta Grossa & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
   Serranópolis do Iguaçu & Foz do Iguaçu & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
@@ -402,7 +402,7 @@ Abatiá & Cornélio Procópio & 16.1 & 0 & 0 & 0.0 & 0.0 & verde \\
   Uniflor & Maringá & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
   Uraí & Cornélio Procópio & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
   Ventania & Telêmaco Borba & 16.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Vera Cruz do Oeste & Cascavel & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Vera Cruz do Oeste & Cascavel & 16.3 &  & 1 & 11.1 & 2.5 & verde \\ 
   Verê & Francisco Beltrão & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
   Virmond & Guarapuava & 11.4 &  & 0 & 0.0 & 0.0 & verde \\ 
   Vitorino & Pato Branco & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
