Atualização script confi.R e recuperação script relatorio Campos

--- a/report/BoletimEstadual_InfoDengue_v2_01.Rnw
+++ b/report/BoletimEstadual_InfoDengue_v2_01.Rnw
@@ -206,7 +206,8 @@ for (i in 1:length(regs)){
 @
 
 
-%-----------------------------------------------------------------------------------%	MAIN BODY - THIRD PAGE
+%-----------------------------------------------------------------------------------%
+%MAIN BODY - THIRD PAGE
 %-----------------------------------------------------------------------------------
  %\begin{minipage}[t]{1\linewidth} % Mini page taking up 100% of the actual page
 
